--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -13,26 +13,64 @@
     <div class="container">
         <h1><%= title %></h1>
 
-        <form action="">
-            <hr>
-            <table class="table table-bordered table-hover">
-                <thead>
-                    <tr>
-                        <th>#</th>
-                        <th>Title</th>
-                        <th>Description</th>
-                        <th>Operations</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <% for (var i = 0; i< task.legth, i++) {%>
-
-                    <% }%>
-                </tbody>
-            </table>
+        <form action="/add" method="post">
+            <legend>
+                Add a Task
+            </legend>
+            <div class="form-group">
+                <input placeholder="Add a title" type="text" id="title" class="form-control" name="title">
+            </div>
+            <div class="form-group">
+                <textarea placeholder="Add a description" class="form-control" cols="50" rows="1"
+                    name="description"></textarea>
+            </div>
+            <button class="btn btn-primary">
+                Add
+            </button>
         </form>
+        <hr>
+        <table class="table table-bordered table-hover">
+            <thead>
+                <tr>
+                    <th>#</th>
+                    <th>Title</th>
+                    <th>Description</th>
+                    <th>Operations</th>
+                </tr>
+            </thead>
+            <tbody>
+                <% for (var i = 0; i< tasks.length; i++) {%>
+                <tr>
+                    <td><%= i + 1 %></td>
+                    <td>
+                        <strong><%= tasks[i].title %></strong>
+                    </td>
+                    <td>
+                        <%= tasks[i].description %>
+                    </td>
+                    <td>
+                        <a class="<%= tasks[i].status ? 'btn btn-success': 'btn btn-dark'%>"
+                            href="/turn/<%= tasks[i]._id %>">Done</a>
+                        <a id="delete" class="btn btn-danger" href="/delete/<%= tasks[i]._id%>">Delete</a>
+                    </td>
+                </tr>
+                <% }%>
+            </tbody>
+        </table>
+
 
     </div>
+    <script>
+        document.getElementById('title').focus();
+        document.getElementById('delete')
+            .addEventListener('click', function (e) {
+                let response = confirm('are you sure to delete');
+                if (!response) {
+                    e.preventDefault();
+
+                }
+            });
+    </script>
 </body>
 
 </html>
