--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -51,7 +51,7 @@
                     <td>
                         <a class="<%= tasks[i].status ? 'btn btn-success': 'btn btn-dark'%>"
                             href="/turn/<%= tasks[i]._id %>">Done</a>
-                        <a id="delete" class="btn btn-danger" href="/delete/<%= tasks[i]._id%>">Delete</a>
+                        <a id="delete" class="btn btn-danger" href="/delete/<%= tasks[i]._id%>">Delet</a>
                     </td>
                 </tr>
                 <% }%>
